# infrastructure

./: README.md
.github/workflows/: packer.yml
ansible/: pyproject.toml
packer/reverse_proxy/: README.md  packer.json
terraform/github/: .terraform.lock.hcl  backend.tf  memberships.tf  provider.tf  repositories.tf  teams.tf  versions.tf
terraform/scaleway/: .terraform.lock.hcl  backend.tf  buckets.tf  provider.tf  ssh_keys.tf  versions.tf
